# search-engine

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  parser.rs  server.rs  storage.rs  tokenizer.rs
templates/: base.html  index.html  search.html
