[package]
name = "search-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "2.0.2"
postcard = { version = "1.0.8", features = ["alloc"] }
reqwest = "0.11.22"
rocksdb = { version = "0.21.0", default-features = false, features = [
  "snappy",
] }
scraper = "0.17.1"
serde = { version = "1.0.188", features = ["serde_derive", "derive"] }
tokio = { version = "1.32.0", features = ["macros", "full"] }
unidecode = "0.3.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
