[package]
name = "search-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12.1", features = ["with-axum"], default-features = false }
askama_axum = "0.3.0"
axum = "0.6.20"
indexmap = "2.0.2"
postcard = { version = "1.0.8", default-features = false, features = ["alloc"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
reqwest = "0.11.22"
rusqlite = "0.29.0"
scraper = "0.17.1"
serde = { version = "1.0.188", features = ["serde_derive", "derive"] }
tokio = { version = "1.32.0", features = ["macros", "full"] }
unidecode = "0.3.0"
url = "2.4.1"
